--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
         <h3 class="colorTitulo">Hola, Mundo.</h3>
         <p>Mi nombre es Matías Palacios, estudiante de la Tecnicatura Universitaria en Programación de la Universidad Tecnológica Nacional.</p>
         <p>Soy estudiante desde el 2022 y mis conocimientos son todos adquiridos en la facultad.</p>
-        <p>Actualmente trabajo en comercio en un supermercado mayorista.</p>
         <p>Soy una persona que busca seguir aprendiendo y desarrollando conocimientos y habilidades IT y crecer tanto el lo laboral como en lo personal.</p>
-        <img width="240px" src="C:\Users\riosp\Desktop\Maty\20250920_132904-V2.JPG" alt="foto">
+        <img width="240px" src= alt="foto">
     </section>
 
     <section id="Conocimientos">
         <h2 class="colorTitulo">Conocimientos</h2>
-        <img width="200px" src= "C:\Users\riosp\Desktop\Maty\2025\PR III\Actividad 3\Logo C++.png" alt="C++">
-        <img width="140px" src= "C:\Users\riosp\Desktop\Maty\2025\PR III\Actividad 3\Csharp_Logo.png" alt="C#">
+        <table>
+            <tr>
+                <td><img width="100px" src= https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png alt="C++"></td>
+                <td><img width="185px" src= https://upload.wikimedia.org/wikipedia/commons/4/4f/Csharp_Logo.png alt="C#"></td>
+            </tr>
+        </table>
+        
     </section>
     
     <section id="Estudios">
@@ -56,7 +60,7 @@
             <h2 class="colorTitulo">Contacto</h2>
             <table>
                 <tr>
-                    <td><img width="100px" src="C:\Users\riosp\Desktop\Maty\2025\PR III\Actividad 3\logo-Gmail-1.png" alt="gmail"></td>
+                    <td><img width="80px" src=https://cdn-icons-png.flaticon.com/512/5968/5968534.png alt="gmail"></td>
                     <td><p>Mail: matiihpalacios@gmail.com</p></td>
                 </tr>
             </table>
@@ -66,7 +70,7 @@
             <h2 class="colorTitulo">Redes</h2>
             <table>
                 <tr>
-                    <td><img width="80px" src="C:\Users\riosp\Desktop\Maty\2025\PR III\Actividad 3\images.png" alt="GitHub"></td>
+                    <td><img width="80px" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub"></td>
                     <td><a href="https://github.com/MatiasPalacios1">GitHub</a></td>
                 </tr>
             </table>
