--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Mi nombre es Matías Palacios, estudiante de la Tecnicatura Universitaria en Programación de la Universidad Tecnológica Nacional.</p>
         <p>Soy estudiante desde el 2022 y mis conocimientos son todos adquiridos en la facultad.</p>
         <p>Soy una persona que busca seguir aprendiendo y desarrollando conocimientos y habilidades IT y crecer tanto en lo laboral como en lo personal.</p>
-        <img width="240px" src= "C:\Users\riosp\Desktop\Maty\20250920_220908.PNG" alt="foto">
+        <img width="240px" src= "C:\Users\riosp\Desktop\Maty\20250920_220908.PNG" alt="foto"> <!--Ultima foto que subi-->
     </section>
 
     <section id="Conocimientos">
