--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Mi nombre es Matías Palacios, estudiante de la Tecnicatura Universitaria en Programación de la Universidad Tecnológica Nacional.</p>
         <p>Soy estudiante desde el 2022 y mis conocimientos son todos adquiridos en la facultad.</p>
         <p>Soy una persona que busca seguir aprendiendo y desarrollando conocimientos y habilidades IT y crecer tanto en lo laboral como en lo personal.</p>
-        <img width="240px" src= "C:\Users\riosp\Desktop\Maty\20250920_220908.PNG" alt="foto"> <!--Ultima foto que subi-->
+        <img width="240px" src= "20250920_220908.PNG" alt="foto"> <!--Ultima foto que subi-->
     </section>
 
     <section id="Conocimientos">
@@ -49,7 +49,7 @@
     <section id="Proyectos">
         <h2 class="colorTitulo">Proyectos</h2>
         <div>
-            <img width="350px" src="C:\Users\riosp\Desktop\Maty\2025\PR III\Actividad 3\Quinientos.png" alt="QuinientosImagen">
+            <img width="350px" src="Quinientos.png" alt="QuinientosImagen">
         </div>
         <p>El Quinientos es un juego de dados hecho en C++.</p>
         <a href="https://github.com/MatiasPalacios1/Quinientos.git">Quinientos</a>
